# joint

./: .gitignore  CMakeLists.txt  README.md  flows.json  get_settings.sh  hass_desktop.yml  sdkconfig.defaults  update_settings.sh
files/web/: index.html
hardware/GH-3.3/: greenhouse.kicad_pcb  greenhouse.kicad_prl  greenhouse.kicad_pro  greenhouse.kicad_sch
hardware/GH-4DEV/: greenhouse.kicad_pcb  greenhouse.kicad_prl  greenhouse.kicad_pro  greenhouse.kicad_sch
hardware/TDS-meter/: tds_meter.kicad_pcb  tds_meter.kicad_sch
hardware/pH-meter/: ph_meter.kicad_pcb  ph_meter.kicad_prl  ph_meter.kicad_pro  ph_meter.kicad_sch
main/: CMakeLists.txt  Kconfig.projbuild  api.c  api.cpp  api.h  basic_settings.h  bus.c  bus.cpp  bus.h  common.c  common.cpp  common.h  config.h  cvector.h  device.c  device.h  driver.c  driver.cpp  driver.h  hwrtc.c  hwrtc.h  iot.cpp  iot.h  main.c  main.cpp  mqtt.c  mqtt.cpp  mqtt.h  network.c  network.h  node.c  node.cpp  node.h  normal_mode.c  normal_mode.cpp  normal_mode.h  periodic_driver.c  periodic_driver.h  reset_button.c  reset_button.h  (+23 more)
main/boards/: gh_3x.h  gh_42.h  gh_4dev.h
main/drivers/: ahtxx.c  ahtxx.h  dhtxx.c  dhtxx.h  drv_adc.c  drv_adc.h  drv_aht.c  drv_aht.cpp  drv_aht.h  drv_ds18x20.c  drv_ds18x20.cpp  drv_ds18x20.h  drv_gh_adc.c  drv_gh_io.c  drv_ph_meter.c  ds18b20.c  ds18b20.h  gh_adc.c  gh_adc.h  gh_dimmer.c  gh_dimmer.h  gh_io.c  gh_io.h  gh_ph_meter.c  gh_ph_meter.h  rht.c  rht.h  std_strings.h
main/hwrtc/: hwrtc_ds3231.h  hwrtc_none.h  hwrtc_pcf8563.h  rtc_ds3231.h  rtc_pcf8563.c  rtc_pcf8563.h
(+1 files in other folders)
