idf_component_register(
    SRCS
        common.c
        bus.c
        system.c
        settings.c
        wifi.c
        mqtt.c
        api.c
        webserver.c
        node.c
        reset_button.c
        safe_mode.c
        normal_mode.c
        hwrtc.c
        sntp.c
        main.c
        device.c
        driver.c

        drivers/ahtxx.c
        drivers/ds18b20.c
        drivers/gh_io.c
        drivers/gh_adc.c
        drivers/gh_ph_meter.c
        drivers/dhtxx.c

    INCLUDE_DIRS
        .
)
